GNOME Bugzilla – Bug 744841
Prevent multiple about dialogs from opening
Last modified: 2015-02-26 09:20:28 UTC
Currently when we click to open 'About' dialog, we can open another 'About' dialog over it. I don't think this is expected behavior. It shouldn't allow any other 'About' dialog to pop over it.
Yes, this is a bug. We should somehow disable the 'app.about' action while an about dialog is being shown.
Or you could just have a single about dialog and always present that when the action is activated. That is what most other apps do, and is how GtkAboutDialog is meant to be used.
Created attachment 297841 [details] [review] About dialog: prevent to open more than one about dialog Instead of creating a GtkWidget with gtk_about_dialog_new () then show it, use gtk_show_about_dialog () only like gnome-calendar does.
Review of attachment 297841 [details] [review]: Thanks for the patch, Alessandro. It looks good except a few minor things. Please don't exceed 72 characters per line in the commit message. Also, there is no need to explain the change literally because they are visible in 'git show', 'git format-patch', etc.. It is enough to just explain the overall goal or impact. In this case, the fix is straightforward, so you can just use a subject and omit the body / description. https://wiki.gnome.org/Git/CommitMessages has a longer guide. ::: src/photos-application.c @@ +177,3 @@ + /* Translators: Put your names here */ + "translator-credits", _("translator-credits"), + NULL); I prefer to keep the code in src/photos-main-window.c.
Created attachment 297862 [details] [review] About dialog: prevent to open more than one about dialog Instead of creating a GtkWidget with gtk_about_dialog_new () then show it, use gtk_show_about_dialog () only like gnome-calendar does.
Created attachment 297865 [details] [review] about dialog: prevent to open more than one about dialog
Created attachment 297866 [details] [review] about dialog: prevent to open more than one about dialog
Review of attachment 297866 [details] [review]: Perfect. Thanks Alessandro. I tweaked the commit message a little bit before pushing it.