main-window: Prevent multiple about dialogs from opening

https://bugzilla.gnome.org/show_bug.cgi?id=744841